--- a/FlickFinder/Base.lproj/Main.storyboard
+++ b/FlickFinder/Base.lproj/Main.storyboard
@@ -58,13 +58,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="gCs-G3-chn">
-                                <rect key="frame" x="0.0" y="64" width="375" height="120"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="Rrx-xQ-fWR"/>
                                 </constraints>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="fut-GE-Usl">
-                                <rect key="frame" x="0.0" y="197" width="375" height="470"/>
+                                <rect key="frame" x="0.0" y="153" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wa7-Eb-inT">
                                     <size key="itemSize" width="118" height="110"/>
@@ -73,7 +73,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="a0J-zT-0vV">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="a0J-zT-0vV" customClass="CustomCollectionViewCell" customModule="FlickFinder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="118" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -91,6 +91,9 @@
                                             <constraint firstAttribute="trailing" secondItem="DTV-HL-LTr" secondAttribute="trailing" id="TrZ-1F-LqQ"/>
                                             <constraint firstItem="DTV-HL-LTr" firstAttribute="leading" secondItem="a0J-zT-0vV" secondAttribute="leading" id="Vyx-fk-fox"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="DTV-HL-LTr" id="fGb-Gd-iHf"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
